Single phase hybrid index build should not do clean up with RSTL lock held.

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2020-01-27
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Single phase hybrid index build should not do clean up with RSTL lock held. Else, we might face 3 way deadlock (see SERVER-42824). This fix is a fallout from SERVER-44467

            Assignee:
            Suganthi Mani
            Reporter:
            Suganthi Mani
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: