SERVER-45553 Single phase hybrid index build should not do clean up with RSTL lock held.